--- a/sections/hero-banner.liquid
+++ b/sections/hero-banner.liquid
@@ -2,12 +2,17 @@
 
 {% schema %}
   {
-    "name": "hero",
+    "name": "Hero Banner",
     "settings": [
       {
         "type": "text",
         "id": "text",
         "label": "Text"
+      }
+    ],
+    "presets": [
+      {
+        "name": "Hero Banner"
       }
     ]
   }
