--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -1,16 +1,16 @@
-{% comment %}
-  Renders a list of product's price (regular, sale)
-
-  Accepts:
-  - product: {Object} Product Liquid object (optional)
-  - placeholder: {Boolean} Renders a placeholder price (optional)
-  - use_variant: {Boolean} Renders selected or first variant price instead of overall product pricing (optional)
-  - show_badges: {Boolean} Renders 'Sale' and 'Sold Out' tags if the product matches the condition (optional)
-  - price_class: {String} Adds a price class to the price element (optional)
-  - show_compare_at_price: {Boolean} Renders the compare at price if the product matches the condition (optional)
-
-  Usage:
-  {% render 'price', product: product %}
+{% comment %} 
+                        Renders a list of product's price (regular, sale)
+                       
+                        Accepts: 
+                        - product: {Object} Product Liquid object (optional) 
+                        - placeholder: {Boolean} Renders a placeholder price (optional) 
+                        - use_variant: {Boolean} Renders selected or first variant price instead of overall product pricing (optional) 
+                        - show_badges: {Boolean} Renders 'Sale' and 'Sold Out' tags if the product matches the condition (optional) 
+                        - price_class: {String} Adds a price class to the price element (optional) 
+                        - show_compare_at_price: {Boolean} Renders the compare at price if the product matches the condition (optional)
+                       
+                        Usage:
+                        {% render 'price', product: product %} 
 {% endcomment %}
 {%- liquid
   if use_variant
@@ -30,7 +30,7 @@
   assign money_price_min = price_min | money
   assign money_price_max = price_max | money
   if settings.currency_code_enabled
-    assign money_price = price | money_with_currency
+    assign money_price = price | money
     assign money_price_min = price_min | money_with_currency
     assign money_price_max = price_max | money_with_currency
   endif
@@ -41,8 +41,7 @@
 -%}
 
 {%- unless target == null and placeholder == null -%}
-  <div
-    class="
+  <div class="
       price
       {%- if price_class %} {{ price_class }}{% endif -%}
       {%- if available == false %} price--sold-out{% endif -%}
@@ -50,14 +49,13 @@
       {%- if compare_at_price > price and product.quantity_price_breaks_configured? %} volume-pricing--sale-badge{% endif -%}
       {%- if product.price_varies == false and product.compare_at_price_varies %} price--no-compare{% endif -%}
       {%- if show_badges %} price--show-badge{% endif -%}
-    "
-  >
+    ">
     <div class="price__container">
-      {%- comment -%}
-        Explanation of description list:
-          - div.price__regular: Displayed when there are no variants on sale
-          - div.price__sale: Displayed when a variant is a sale
-      {%- endcomment -%}
+      {%- comment -%} 
+                                                                                                Explanation of description list: 
+                                                                                                - div.price__regular: Displayed when there are no variants on sale 
+                                                                                                - div.price__sale: Displayed when a variant is a sale 
+                                                                        {%- endcomment -%}
       <div class="price__regular">
         {%- if product.quantity_price_breaks_configured? -%}
           {%- if show_compare_at_price and compare_at_price -%}
@@ -68,9 +66,9 @@
               <span>
                 <s class="price-item price-item--regular variant-item__old-price">
                   {% if settings.currency_code_enabled %}
-                    {{ compare_at_price | money_with_currency }}
+                    {{ compare_at_price | money_without_currency }}
                   {% else %}
-                    {{ compare_at_price | money }}
+                    {{ compare_at_price | money_without_currency }}
                   {% endif %}
                 </s>
               </span>
@@ -78,9 +76,8 @@
           {%- endif -%}
           <span class="visually-hidden visually-hidden--inline">{{ 'products.product.price.regular_price' | t }}</span>
           <span class="price-item price-item--regular">
-            {{-
-              'products.product.volume_pricing.price_range'
-              | t: minimum: money_price_min, maximum: money_price_max
+            {{- 'products.product.volume_pricing.price_range'
+ | t: minimum: money_price_min, maximum: money_price_max
             -}}
           </span>
         {%- else -%}
@@ -96,9 +93,9 @@
           <span>
             <s class="price-item price-item--regular">
               {% if settings.currency_code_enabled %}
-                {{ compare_at_price | money_with_currency }}
+                {{ compare_at_price | money_without_currency }}
               {% else %}
-                {{ compare_at_price | money }}
+                {{ compare_at_price | money_without_currency }}
               {% endif %}
             </s>
           </span>
@@ -112,7 +109,7 @@
         <span class="visually-hidden">{{ 'products.product.price.unit_price' | t }}</span>
         <span class="price-item price-item--last">
           <span>{{- product.selected_or_first_available_variant.unit_price | money -}}</span>
-          <span aria-hidden="true">/</span>
+          <span>/</span>
           <span class="visually-hidden">&nbsp;{{ 'accessibility.unit_price_separator' | t }}&nbsp;</span>
           <span>
             {%- if product.selected_or_first_available_variant.unit_price_measurement.reference_value != 1 -%}
